--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
               <!-- Other pages -->
               <li class="nav-item ">
-                <a class="nav-link" href="/bio/">Bio</a>
+<!--                 <a class="nav-link" href="/bio/">Bio</a> -->
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="/cv/">CV</a>
               </li>
               <li class="nav-item ">
-                <a class="nav-link" href="/publications/">Publications</a>
+<!--                 <a class="nav-link" href="/publications/">Publications</a> -->
               </li>
             </ul>
           </div>
@@ -140,12 +140,12 @@
 <p align="justify">
 Welcome! I'm Mohammad, a highly skilled telecommunication engineer specializing in "Deep Learning" and "Machine Learning" technologies. I possess extensive expertise in Qt, C++, and CUDA programming, enabling me to develop efficient real-time systems. In addition to my proficiency in GPU programming, I excel in FPGA programming using SystemGenerator and VHDL. I thrive on tackling challenging problems within the communication system industry.
 Throughout my career, I have successfully managed numerous projects related to signal processing and communication system development. Noteworthy achievements include the creation of a GPU-based Software Defined Radio (SDR) capable of handling wideband signals. Moreover, I have designed and implemented various communication links, leveraging GPU-based, FPGA-based, and combined GPU-FPGA architectures.
-My research interests primarily revolve around signal and image processing, wireless and satellite communication systems based on deep learning, and their hardware implementation on cutting-edge devices like GPUs and FPGAs. For a comprehensive overview of my skills and experiences, I invite you to review my <a href="../assets/pdf/CV.pdf">CV</a>.
+My research interests primarily revolve around signal and image processing, wireless and satellite communication systems based on deep learning, and their hardware implementation on cutting-edge devices like GPUs and FPGAs. For a comprehensive overview of my skills and experiences, I invite you to review my <a href="/cv/">CV</a>.
 </p>
 
-<p><br></p>
+<!-- <p><br></p> -->
 
-<hr>
+<!-- <hr> -->
 
     <!-- Selected papers --><style>
   hr { 
@@ -160,7 +160,7 @@ My research interests primarily revolve around signal and image processing, wire
   </style>
   <div class="publications">
     <hr>
-    <h2>Selected Publications</h2>
+<!--     <h2>Selected Publications</h2> -->
     <ol class="bibliography">
 
 
@@ -176,7 +176,7 @@ My research interests primarily revolve around signal and image processing, wire
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2023 Mohaamad Hasan Shammakhi. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank" rel="external nofollow noopener">GitHub Pages</a>.
+<!--         © Copyright 2023 Mohaamad Hasan Shammakhi. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank" rel="external nofollow noopener">GitHub Pages</a>. -->
 
       </div>
     </footer>
