--- a/cv/index.html
+++ b/cv/index.html
@@ -68,7 +68,7 @@
 
               <!-- Other pages -->
               <li class="nav-item ">
-<!--                 <a class="nav-link" href="/bio/">Bio</a> -->
+                <a class="nav-link" href="/bio/">Bio</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/cv/">CV<span class="sr-only">(current)</span></a>
