--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Mohammad Hasan Shammakhi</title>
   <meta name="author" content="MH">
-  <meta name="description" content="
-  Welcome to the personal website of Mohammad Hasan Shammakhi, where you can explore his professional journey and access his comprehensive CV. Discover a detailed overview of his career accomplishments, expertise, and project contributions. Stay connected to stay updated with his latest endeavors in the field of telecommunications and technology.">
+  <meta name="description" content="Welcome to the personal website of Mohammad Hasan Shammakhi, where you can explore his professional journey and access his comprehensive CV. Discover a detailed overview of his career accomplishments, expertise, and project contributions. Stay connected to stay updated with his latest endeavors in the field of telecommunications and technology.">
+  
   <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website">
 
 
