--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
               <a class="nav-link" href="/cv/">CV</a>
             </li>
             <li class="nav-item ">
+              <a class="nav-link" href="/projects/">Projects</a>
+            </li>
+            <li class="nav-item ">
               <!--                 <a class="nav-link" href="/publications/">Publications</a> -->
             </li>
           </ul>
