publication tab added

--- a/projects/index.html
+++ b/projects/index.html
@@ -66,19 +66,18 @@
               </li>
               
 
-              <!-- Other pages -->
-              <li class="nav-item ">
-                <a class="nav-link" href="/bio/">Bio</a>
-              </li>
-              <li class="nav-item">
+               <!-- Other pages -->
+               <li class="nav-item">
                 <a class="nav-link" href="/cv/">CV</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="/projects/">Projects<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item ">
-<!--                 <a class="nav-link" href="/publications/">Publications</a> -->
+              <li class="nav-item">
+                <a class="nav-link" href="/pub/">Research & Publications</a>
               </li>
+              <li class="nav-item ">
+                <a class="nav-link" href="/bio/">Bio</a>
             </ul>
           </div>
         </div>
