--- a/cv/index.html
+++ b/cv/index.html
@@ -66,18 +66,18 @@
               </li>
               
 
-              <!-- Other pages -->
-              <li class="nav-item ">
-                <a class="nav-link" href="/bio/">Bio</a>
-              </li>
-              <li class="nav-item active">
+               <!-- Other pages -->
+               <li class="nav-item active">
                 <a class="nav-link" href="/cv/">CV<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item ">
                 <a class="nav-link" href="/projects/">Projects</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pub/">Research & Publications</a>
+              </li>
               <li class="nav-item ">
-<!--                 <a class="nav-link" href="/publications/">Publications</a> -->
+                <a class="nav-link" href="/bio/">Bio</a>
               </li>
             </ul>
           </div>
