--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
 
             <!-- Other pages -->
-            <li class="nav-item ">
-              <a class="nav-link" href="/bio/">Bio</a>
+            <li class="nav-item">
+            <a class="nav-link" href="/cv/">CV</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="/cv/">CV</a>
-            </li>
-            <li class="nav-item ">
+            <li class="nav-item">
               <a class="nav-link" href="/projects/">Projects</a>
             </li>
-            <li class="nav-item ">
-              <!--                 <a class="nav-link" href="/publications/">Publications</a> -->
+            <li class="nav-item">
+              <a class="nav-link" href="/pub/">Research & Publications</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/bio/">Bio</a>
             </li>
           </ul>
         </div>
