--- a/projects/index.html
+++ b/projects/index.html
@@ -745,15 +745,14 @@
                     <div id="WASSPA" class="col-sm-8">
 
                       <!-- Title -->
-                      <div class="title">PhD. in Electrical Engineering, Communication Systems (unfinished)</div>
-                      <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">School of Electrical Engineering, Amirkabir
-                        University of Technology</h6>
+                      <h6 class="title font-weight-bold ml-1 ml-md-4">PhD. in Electrical Engineering, Communication
+                        Systems (unfinished)</h6>
+
+                        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">School of Electrical Engineering, Amirkabir
+                          University of Technology</h6>
                       <!-- Author -->
                       <div class="author">
-
-                        Supervisor: Dr. Hamid Sheikhzadeh, Dr. Hamzeh Beyranvand</div>
-
-                      <!-- Journal/Book title and date -->
+                        Supervisors: Dr. Hamid Sheikhzadeh, Dr. Hamzeh Beyranvand</div>
 
 
                       <!-- Links/Buttons -->
