MSc and BSc added

--- a/projects/index.html
+++ b/projects/index.html
@@ -769,6 +769,79 @@
                 </li>
               </ol>
               
+              <h2 class="year">MSc</h2>
+              <ol class="bibliography">
+                <li>
+                  <!-- _layouts/bib.html -->
+                  <div class="row">
+                    <div class="col-sm-2 abbr"><abbr class="badge">Sep 2014– Sep 2016</abbr></div>
+
+                    <!-- Entry bib key -->
+                    <div id="WASSPA" class="col-sm-8">
+
+                      <!-- Title -->
+                      <h6 class="title font-weight-bold ml-1 ml-md-4">M.Sc. in Electrical Engineering, Communication
+                        Systems</h6>
+
+
+                      <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">School of Electrical Engineering, Amirkabir
+                        University of Technology</h6>
+                      <!-- Author -->
+                      <div class="author">
+                        Supervisor: Dr. Hamid Sheikhzadeh, Advisor: Dr. Vahid Pourahmadi</div>
+
+
+                      <!-- Links/Buttons -->
+                      <div class="links">
+                        <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
+                      </div>
+
+                      <!-- Hidden abstract block -->
+                      <div class="abstract hidden">
+                        <p></p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ol>
+
+              <h2 class="year">BSc</h2>
+              <ol class="bibliography">
+                <li>
+                  <!-- _layouts/bib.html -->
+                  <div class="row">
+                    <div class="col-sm-2 abbr"><abbr class="badge">Sep 2010– Sep 2014</abbr></div>
+
+                    <!-- Entry bib key -->
+                    <div id="WASSPA" class="col-sm-8">
+
+                      <!-- Title -->
+                      <h6 class="title font-weight-bold ml-1 ml-md-4">B.Sc. in Electrical Engineering, Electronics
+                      </h6>
+
+
+                      <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">School of Electrical Engineering, Shahid
+                        Rajaee University</h6>
+                      <!-- Author -->
+                      <div class="author">
+                        Supervisors: Dr. Nasour Bagheri</div>
+
+
+                      <!-- Links/Buttons -->
+                      <div class="links">
+                        <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
+                      </div>
+
+                      <!-- Hidden abstract block -->
+                      <div class="abstract hidden">
+                        <p></p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
+              </ol>
+
+
               <div>
 
                 <ul class="card-text font-weight-light list-group list-group-flush">
