--- a/cv/index.html
+++ b/cv/index.html
@@ -188,6 +188,43 @@
                 <ul
                   class="card-text font-weight-light list-group list-group-flush">
 
+
+                  <li class="list-group-item">
+                    <div class="row">
+
+                      <div class="col-xs-2 cl-sm-2 col-md-2 text-center"
+                        style="width: 75px;">
+                        <span
+                          class="badge font-weight-bold danger-color-dark text-uppercase align-middle"
+                          style="min-width: 75px;">
+                          Mar 2023 - Dec 2023
+                        </span>
+                      </div>
+
+                      <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
+
+                        <h6 class="title font-weight-bold ml-1 ml-md-4">Applied R&D Engineer</h6>
+
+                        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;"><a
+                            href="https://qualinx.io/"
+                            target="_blank"
+                            rel="external nofollow noopener">Qualinx & NextIO</a></h6>
+
+                        <ul class="items">
+
+                          <li>
+
+                            <span class="item">GNSS R&D Engineer
+                              </span>
+
+                          </li>
+
+                        </ul>
+
+                      </div>
+                    </div>
+                  </li>
+
                   <li class="list-group-item">
                     <div class="row">
 
@@ -204,14 +241,13 @@
 
                         <h6 class="title font-weight-bold ml-1 ml-md-4">Project
                           Manager and Applied Research and Development</h6>
-                          
+
                         <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;"><a
                             href="https://www.linkedin.com/company/sunyar/"
                             target="_blank"
                             rel="external nofollow noopener">SUNYAR</a></h6>
-                            <button class="btn btn-link btn-expand" type="button">Expand/Collapse</button>
-                        <!-- <ul class="items"> -->
-                          <ul class="items" style="display: none;"></ul>
+
+                        <ul class="items">
 
                           <li>
 
