Added some minor updates

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
 
         <div class="clearfix">
-          <h4>Telecommunication Engineer</h4>
+          <h4> Research and Development Engineer</h4>
           <h5>📍Vancouver, British Columbia, Canada</h5>
           <p><br>
             <!-- Vancouver, British Columbia, Canada <br/><br/> --></p>
