--- a/cv/index.html
+++ b/cv/index.html
@@ -188,6 +188,54 @@
                 <ul
                   class="card-text font-weight-light list-group list-group-flush">
 
+                  <li class="list-group-item">
+                    <div class="row">
+
+                      <div class="col-xs-2 cl-sm-2 col-md-2 text-center"
+                        style="width: 75px;">
+                        <span
+                          class="badge font-weight-bold danger-color-dark text-uppercase align-middle"
+                          style="min-width: 75px;">
+                          Mar 2023 - Dec 2023
+                        </span>
+                      </div>
+
+                      <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
+
+                        <h6 class="title font-weight-bold ml-1 ml-md-4">Senior Wireless Engineer</h6>
+
+                        <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;"><a
+                            href="https://www.bluvec.com/"
+                            target="_blank"
+                            rel="external nofollow noopener">Bluvec Technology</a></h6>
+
+                        <ul class="items">
+
+                          <li>
+
+                            <span class="item">Wireless researcher
+                              </span>
+
+                          </li>
+
+                          <li>
+
+                            <span class="item">C++ and CUDA developer
+                              </span>
+
+                          </li>
+
+                          <li>
+
+                            <span class="item"> Go Lang Developer
+                              </span>
+
+                          </li>
+                        </ul>
+
+                      </div>
+                    </div>
+                  </li>
 
                   <li class="list-group-item">
                     <div class="row">
