--- a/cv/index.html
+++ b/cv/index.html
@@ -196,7 +196,7 @@
                         <span
                           class="badge font-weight-bold danger-color-dark text-uppercase align-middle"
                           style="min-width: 75px;">
-                          Mar 2023 - Dec 2023
+                          Jan 2024 - Present
                         </span>
                       </div>
 
