--- a/projects/index.html
+++ b/projects/index.html
@@ -746,7 +746,7 @@
 
                       <!-- Title -->
                       <h6 class="title font-weight-bold ml-1 ml-md-4">PhD. in Electrical Engineering, Communication
-                        Systems (unfinished)</h6>
+                        Systems</h6>
 
                         <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem;">School of Electrical Engineering, Amirkabir
                           University of Technology</h6>
