--- a/pub/index.html
+++ b/pub/index.html
@@ -86,9 +86,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="/pub/">Research & Publications<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item ">
+            <!-- <li class="nav-item ">
               <a class="nav-link" href="/bio/">Bio</a>
-            </li>
+            </li> -->
 
           </ul>
         </div>
@@ -289,6 +289,42 @@
 
               <h2 class="year">2022</h2>
               <ol class="bibliography">
+                                <li>
+                  <!-- _layouts/bib.html -->
+                  <div class="row">
+                    <div class="col-sm-2 abbr"><abbr class="badge">Journal</abbr></div>
+
+                    <!-- Entry bib key -->
+                    <div id="WASSPA" class="col-sm-8">
+
+                      <!-- Title -->
+                      <div class="title">Legacy-Agnostic Band Integration Approach: A Cost-Effective and Seamless C+ L-Band Optical Network Migration/Sec Frame-Based Phase Locked Loop on GPU</div>
+                      <!-- Author -->
+                      <div class="author">
+
+                        MH. Shammakhi, F. Arpanaei, H. Beyranvand, H. Sheikhzadeh</div>
+
+                      <!-- Journal/Book title and date -->
+
+                      <div class="periodical">
+                        <em>In Elsevier PARCO,</em> 2022
+                      </div>
+
+                      <!-- Links/Buttons -->
+                      <div class="links">
+                        <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
+                        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100444"
+                          class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener"
+                          target="_blank">Link</a>
+                      </div>
+
+                      <!-- Hidden abstract block -->
+                      <div class="abstract hidden">
+                        <p>This paper addresses the escalating demand for enhanced data transmission rates and increased network capacity in elastic optical networks. We propose a novel legacy-agnostic band integration approach for cost-effective and seamless C+L-band optical network migration, focusing on a “pay-as-you-grow” (PaYG) strategy to optimize capital expenditure (CAPEX). This approach leverages advanced modeling techniques, including the enhanced generalized Gaussian noise (EGGN) model, to account for inter-channel stimulated Raman scattering (ISRS) and other nonlinear effects, ensuring optimal quality of transmission (QoT). Through extensive simulations on real-world network topologies, we compare the performance of various PaYG algorithms against a traditional Day-One (DO) approach, demonstrating significant gains in throughput and CAPEX efficiency. Notably, the proposed PaYG-WAR (PaYG-With All Reconfigurations) outperforms other strategies, maximizing throughput while minimizing the deployment of costly infrastructure components. Our results provide valuable insights for telecom operators seeking a financially viable and practical solution for migrating optical networks to C+L-band operation. Specifically, PaYG-WAR achieves 20% higher throughput compared to DO and PaYG-WoR (PaYG-Without Reconfigurations) and 17% more than PaYG-WFR (PaYG-With Full Reconfigurations), while requiring 25% less CAPEX than DO-CHB (DO-Channel Based). These findings underscore the potential of PaYG-WAR in facilitating efficient, cost-effective network upgrades to meet next-generation communication demands.</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
                 <li>
                   <!-- _layouts/bib.html -->
                   <div class="row">
