--- a/cv/index.html
+++ b/cv/index.html
@@ -96,9 +96,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/pub/">Research & Publications</a>
               </li>
-              <li class="nav-item ">
+              <!-- <li class="nav-item ">
                 <a class="nav-link" href="/bio/">Bio</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
