--- a/projects/index.html
+++ b/projects/index.html
@@ -86,9 +86,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/pub/">Research & Publications</a>
             </li>
-            <li class="nav-item ">
+            <!-- <li class="nav-item ">
               <a class="nav-link" href="/bio/">Bio</a>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </nav>
