--- a/pub/index.html
+++ b/pub/index.html
@@ -307,13 +307,13 @@
                       <!-- Journal/Book title and date -->
 
                       <div class="periodical">
-                        <em>In Elsevier PARCO,</em> 2022
+                        <em> Journal of Lightwave Technology,</em> 2024
                       </div>
 
                       <!-- Links/Buttons -->
                       <div class="links">
                         <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
-                        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4100444"
+                        <a href="https://ieeexplore.ieee.org/abstract/document/11129616"
                           class="btn btn-sm z-depth-0" role="button" rel="external nofollow noopener"
                           target="_blank">Link</a>
                       </div>
@@ -419,6 +419,41 @@
 
               <h2 class="year">2016</h2>
               <ol class="bibliography">
+                                <li>
+                  <!-- _layouts/bib.html -->
+                  <div class="row">
+                    <div class="col-sm-2 abbr"><abbr class="badge">Conference</abbr></div>
+
+                    <!-- Entry bib key -->
+                    <div id="ICSPIS" class="col-sm-8">
+
+                      <!-- Title -->
+                      <div class="title">A Digital Twin-Driven Framework for Cost-Effective Upgrading from C-Band to Multi-Band Optical Networks</div>
+                      <!-- Author -->
+                      <div class="author">
+
+                        F. Arpanaei; M.H. Shammakhi; H. Beyranvand; H. Sheikhzadeh; M. Ranjbar Zefreh; S. Yan </div>
+
+                      <!-- Journal/Book title and date -->
+
+                      <div class="periodical">
+                        <em>In IEEE ICTON, Barcelona, Spain,</em> 2025
+                      </div>
+
+                      <!-- Links/Buttons -->
+                      <div class="links">
+                        <a class="abstract btn btn-sm z-depth-0" role="button">Abstract</a>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/11125139/authors#authors" class="btn btn-sm z-depth-0"
+                          role="button" rel="external nofollow noopener" target="_blank">Link</a>
+                      </div>
+
+                      <!-- Hidden abstract block -->
+                      <div class="abstract hidden">
+                        <p>The transition from C-band to ultra-wideband (C+L+S-band) optical networks is essential to meet escalating traffic demands but poses significant technical and economic challenges. This paper presents a digital twin (DT)-driven framework to evaluate and guide Pay-as-You-Grow (PaYG) migration strategies, enabling flexible and low-risk spectrum expansion. The proposed optical network digital twin (ONDT) accurately models inter-channel stimulated Raman scattering (ISRS), generalized signal-to-noise ratio (GSNR), and dynamic service reconfiguration to assess upgrade impacts in a virtual environment. We evaluate five PaYG strategies on the USB14 ultra-long-haul network using 64 GBaud transceivers and 20 THz total spectrum. Simulation results show that the most aggressive approach, PaYG-WAR (with all reconfigurations), achieves up to 17% higher throughput and 70% lower CAPEX per 100 Gbps of traffic compared to conservative strategies, while minimizing hardware upgrades. The ONDT-guided approach ensures cost-effective, scalable, and non-disruptive multi-band migration, making it a robust tool for future optical backbone evolution.</p>
+                      </div>
+                    </div>
+                  </div>
+                </li>
                 <li>
                   <!-- _layouts/bib.html -->
                   <div class="row">
